# brimstone

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  run_tests.sh  rust-toolchain.toml  rustfmt.toml
src/: Cargo.toml  main.rs
src/benches/: README.md  benches.rs  install.sh
src/brimstone_icu_collections/: Cargo.toml  build.rs
src/brimstone_icu_collections/src/: lib.rs
src/brimstone_macros/: Cargo.toml
src/brimstone_macros/src/: lib.rs  match_u32.rs  wrap_ordinary_object.rs
src/brimstone_serialized_heap/: Cargo.toml  build.rs
src/brimstone_serialized_heap/src/: lib.rs
src/js/: Cargo.toml  ast.rs  lexer.rs  lib.rs  loc.rs  mod.rs  parser.rs  printer.rs  token.rs
src/js/common/: alloc.rs  constants.rs  error.rs  filesystem.rs  graphviz.rs  icu.rs  macros.rs  math.rs  memory.rs  mod.rs  numeric.rs  options.rs  serialized_heap.rs  static_assert.rs  string.rs  string_iterators.rs  terminal.rs  time.rs  unicode.rs  unicode_property.rs  varint.rs  wtf_8.rs
src/js/parser/: analyze.rs  ast.rs  ast_visitor.rs  context.rs  facts.rs  lexer.rs  lexer_stream.rs  loc.rs  mod.rs  parse_error.rs  parser.rs  printer.rs  regexp.rs  regexp_parser.rs  scope.rs  scope_tree.rs  source.rs  token.rs  unicode_tables.rs
src/js/runtime/: abstract_operations.rs  accessor.rs  alloc_error.rs  annex_b.rs  arguments_object.rs  array_object.rs  array_properties.rs  async_generator_object.rs  bigint_value.rs  bitmap.rs  bound_function_object.rs  boxed_value.rs  builtin_function.rs  builtin_generator.rs  builtin_names.rs  class_names.rs  common_shapes.rs  completion.rs  console.rs  console_object.rs  context.rs  debug_print.rs  declarative_environment.rs  descriptor_registry.rs  environment.rs  error.rs  eval_result.rs  execution_context.rs  for_in_iterator.rs  function.rs  gc_object.rs  generator_object.rs  global_environment.rs  global_names.rs  global_object.rs  heap_item_descriptor.rs  interned_strings.rs  intrinsic_builder.rs  iterator.rs  mod.rs  (+32 more)
tests/: Cargo.toml  README.md  js_parser_tests.rs  lib.rs  snapshot_tests.rs  test_manifest.jsonc
tests/fuzz/: .gitignore  Cargo.toml  build.sh  coverage.c  run.sh
tests/fuzz/src/: main.rs
tests/harness/: Cargo.toml
tests/harness/src/: ignored.rs  index.rs  lib.rs  main.rs  manifest.rs  runner.rs  table.rs
tests/integration/: example-test.js  ignored_tests.jsonc
tests/integration/regression/: 000001.js  000002.js  000003.js  000004.js  000005.js  000006.js  000007.js  000008.js  000009.js  000010.js  000011.js  000012.js  000013.js  000014.js  000015.js  000016.js  000017.js  000018.js  000019.js  000020.js  000021.js  000022.js  000023.js  000024.js  000025.js  000026.js  000027.js  000028.js  000029.js  000030.js  000031.js
tests/js_bytecode/arguments_object/: arguments_object_needed.exp  arguments_object_needed.js  binding.exp  mapped.exp  mapped.js  unmapped_arguments.exp  unmapped_arguments.js
tests/js_bytecode/bytecode/: assign_hazard.exp  assign_hazard.js  jump_patching.exp  jump_patching.js  use_strict_stripped.exp
tests/js_bytecode/class/: constructor.exp  constructor.js  declaration.exp  declaration.js  fields.exp  fields.js  methods.exp  new_class_contiguous_range.exp  private.exp  private_member.exp  private_member.js  private_properties.exp  scope.exp  scope.js  static_initializer.exp  static_initializer.js  super_class.exp  super_member.exp  super_member.js
tests/js_bytecode/eval/: completion.exp  completion.js  delete.exp  delete.js  direct.exp  direct.js  dynamic_lookup_out_of_eval.exp  dynamic_lookup_out_of_eval.js  empty.exp  empty.js  flags.exp  flags.js  forces_dynamic.exp  function_constructor.exp  function_constructor.js  nested_eval.exp  nested_eval.js  private_names.exp  private_names.js  super_members.exp  super_members.js
tests/js_bytecode/example_program/: fib.exp
tests/js_bytecode/expression/:  binary.exp   binary.js  array.exp  array.js  arrow_function.exp  arrow_function.js  assign.exp  assign.js  binary.exp  binary.js  chain.exp  chain.js  class.exp  class.js  conditional.exp  delete.exp  delete.js  evaluates_to_boolean.exp  evaluates_to_boolean.js  function.exp  function.js  literal.exp  literal.js  logical.exp  logical.js  logical_assign.exp  logical_assign.js  member.exp  member.js  new.exp  new.js  new_target.exp  number_literal.exp  number_literal.js  regexp.exp  sequence.exp  sequence.js  super_member.exp  super_member.js  tagged_template.exp  (+11 more)
tests/js_bytecode/function/: async.exp  async.js  async_generator.exp  async_generator.js  basic.exp  basic.js  declaration.exp  declaration.js  generator.exp  generator.js  parameters.exp  parameters.js  return_exhaustive.exp  return_exhaustive.js
tests/js_bytecode/module/: dynamic_import.exp  dynamic_import.js  export_default_arrow_function.exp  export_default_class.exp  export_default_class.js  export_default_class_expression_anonymous.exp  export_default_class_expression_anonymous.js  export_default_expression.exp  export_default_expression.js  export_default_function.exp  export_default_function_anonymous.exp  export_default_function_expression_anonymous.js  exported_bindings.exp  exported_bindings.js  import_meta.exp  import_meta.js  top_level_await.exp  top_level_await.js  toplevel.exp  toplevel.js
tests/js_bytecode/pattern/: basic.exp  basic.js  iterator_destructuring.exp  iterator_destructuring.js  object_destructuring.exp  object_destructuring.js
tests/js_bytecode/scope/: block.exp  block.js  captured.exp  captured.js  captured_this.exp  catch.exp  (+29 more)
tests/js_parser/: comments.exp  empty.exp  function.exp  function.js  hashbang_comment.exp  identifier.exp  identifier.js  let.exp  let.js  use_strict.exp  use_strict.js  variable_declaration.exp  variable_declaration.js
tests/js_regexp_bytecode/: simple.exp
tests/perf/: Cargo.toml  README.md  install.sh
tests/rust/: parser.rs
tests/snapshot/: snapshot_tests.rs
tests/test262/: Cargo.toml  README.md  ignored_tests.jsonc  install_test262.sh
tests/test262-runner/: LICENSE.txt  README.md  package-lock.json  package.json
tools/brimstone_fmt/: Cargo.toml  README.md
(+1740 files in other folders)
