[package]
name = "brimstone"
version = "0.1.0"
authors = ["hanshalverson <hansghalverson@gmail.com>"]
edition = "2018"

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
bitflags = "2.1.0"
clap = { version = "4.0.29", features = ["derive"] }
indexmap = "2.1.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
rand = "0.8.5"
ryu-js = "0.2.2"
supports-color = "3.0.2"

# Internal crates
case_closure_overrides = { path = "src/js/runtime/regexp/case_closure_overrides" }
match_u32 = { path = "src/js/parser/match_u32" }
wrap_ordinary_object = { path = "src/js/runtime/wrap_ordinary_object" }

# ICU4X crates must all be the same version
icu_casemap = "2.0.0-beta1"
icu_collator = "2.0.0-beta1"
icu_collections = "2.0.0-beta1"
icu_locale = "2.0.0-beta1"
icu_normalizer = "2.0.0-beta1"
icu_properties = "2.0.0-beta1"
icu_provider = { version = "2.0.0-beta1", features = ["sync"] }
icu_provider_baked = "2.0.0-beta1"
icu_provider_adapters = "2.0.0-beta1"
zerotrie = "0.2.0"
zerovec = "0.11.0"

[features]
# Run the garbage collector in stress test mode
gc_stress_test = []

[lib]
doctest = false

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
comparison_chain = "allow"
len_without_is_empty = "allow"
new_ret_no_self = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
