[workspace]
members = [
  "src",
  "src/brimstone_icu_collections",
  "src/brimstone_macros",
  "tests",
  "tests/harness",
]
resolver = "2"

[workspace.package]
edition = "2018"
version = "0.1.0"
authors = ["hanshalverson <hansghalverson@gmail.com>"]

[workspace.dependencies]
# Internal Crates
brimstone = { path = "src" }
brimstone_icu_collections = { path = "src/brimstone_icu_collections" }
brimstone_macros = { path = "src/brimstone_macros" }

# External Crates
bitflags = "2.1.0"
clap = "4.0.29"
criterion = "0.5.1"
half = "2.4.1"
hashbrown = "0.15.2"
indexmap-allocator-api = "2.7.1"
num-bigint = "0.4.3"
num-traits = "0.2.16"
quote = "1.0.32"
rand = "0.8.5"
regex = "1.7.1"
ryu-js = "0.2.2"
serde = "1.0.152"
serde_json = "1.0.91"
supports-color = "3.0.2"
syn = "2.0.27"
threadpool = "1.8.1"
yaml-rust = "0.4.5"

# ICU4X crates must all be the same version
icu_casemap = "2.0.0-beta1"
icu_collator = "2.0.0-beta1"
icu_collections = "2.0.0-beta1"
icu_locale = "2.0.0-beta1"
icu_normalizer = "2.0.0-beta1"
icu_properties = "2.0.0-beta1"
icu_provider = "2.0.0-beta1"
icu_provider_baked = "2.0.0-beta1"
icu_provider_adapters = "2.0.0-beta1"
zerotrie = "0.2.0"
zerovec = "0.11.0"

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
comparison_chain = "allow"
len_without_is_empty = "allow"
new_ret_no_self = "allow"
new_without_default = "allow"
too_many_arguments = "allow"

[patch.crates-io]
# A version of indexmap 2.7.1 patched to support the allocator API
indexmap-allocator-api = { git = 'https://github.com/Hans-Halverson/indexmap-allocator-api.git' }
