[package]
name = "brimstone_tests"
version.workspace = true
edition.workspace = true
publish = false

# Disable automatic test discovery
autotests = false

[dev-dependencies]
brimstone_core.workspace = true
brimstone_serialized_heap.workspace = true
clap = { workspace = true, features = ["derive"] }

[[test]]
name = "tests"
path = "lib.rs"