[package]
name = "brimstone_integration_test_harness"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
brimstone.workspace = true
clap = { workspace = true, features = ["derive"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
threadpool.workspace = true
yaml-rust.workspace = true

[features]
gc_stress_test = ["brimstone/gc_stress_test"]
handle_stats = ["brimstone/handle_stats"]