[package]
name = "brimstone_perf"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "bs-perf"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
