[package]
name = "case_closure_overrides"
version.workspace = true
edition.workspace = true

[dependencies]
icu_casemap.workspace = true
icu_collator.workspace = true
icu_collections.workspace = true
icu_locale.workspace = true
icu_normalizer.workspace = true
icu_properties.workspace = true
icu_provider = { workspace = true, features = ["sync"] }
icu_provider_baked.workspace = true
icu_provider_adapters.workspace = true
zerotrie.workspace = true
zerovec.workspace = true

[build-dependencies]
icu_casemap.workspace = true
icu_collator.workspace = true
icu_collections.workspace = true
icu_locale.workspace = true
icu_normalizer.workspace = true
icu_properties.workspace = true
icu_provider = { workspace = true, features = ["sync"] }
icu_provider_baked.workspace = true
icu_provider_adapters.workspace = true
zerotrie.workspace = true
zerovec.workspace = true